[package]
name = "win10setting"
version = "0.1.0"
edition = "2018"

[dependencies]
webview_official = "0.2.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
bytes = "1.0.1"
futures-util = "0.3.15"
regex = "1.5.4"
serde_json = "1.0.64"
tokio-util = "0.6.7"
hmac = "0.11.0"
sha2 = "0.9.5"
rand = "0.8.4"
hex = "0.4"
dirs = "3.0"
base64 = "0.13.0"